WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169730
[CMake][JSCOnly] Fix build with GLib event loop
https://bugs.webkit.org/show_bug.cgi?id=169730
Summary
[CMake][JSCOnly] Fix build with GLib event loop
Carlos Alberto Lopez Perez
Reported
2017-03-15 19:10:02 PDT
I discovered that JSCOnly can be built with the GLib event loop by passing the cmake argument -DEVENT_LOOP_TYPE="glib" But the build is currently broken. Lets fix it.
Attachments
Patch
(2.04 KB, patch)
2017-03-15 19:17 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2017-03-15 19:17:18 PDT
Created
attachment 304595
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-15 20:15:06 PDT
Comment on
attachment 304595
[details]
Patch Clearing flags on attachment: 304595 Committed
r214025
: <
http://trac.webkit.org/changeset/214025
>
WebKit Commit Bot
Comment 3
2017-03-15 20:15:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug