[CMake][JSCOnly] Fix build with GLib event loop https://bugs.webkit.org/show_bug.cgi?id=169730

Reviewed by Michael Catanzaro.

* wtf/MainThread.cpp:
* wtf/PlatformJSCOnly.cmake: WorkQueueGLib was removed in r199713.


Canonical link: https://commits.webkit.org/186697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214025 268f45cc-cd09-0410-ab3c-d52691b4dbfc